<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="4dp">

            <TextView
                style="@style/CategoryStyle"
                android:text="@string/product" />

            <Spinner
                android:id="@+id/product_name_spinner"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2">

            </Spinner>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="4dp">

            <TextView
                style="@style/CategoryStyle"
                android:text="@string/location" />

            <EditText
                android:id="@+id/edit_product_location"
                style="@style/EditorFieldStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/seller_s_location"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="4dp">

            <TextView
                style="@style/CategoryStyle"
                android:text="@string/quantity" />

            <EditText
                android:id="@+id/edit_product_quantity"
                style="@style/EditorFieldStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/quantity"
                android:inputType="number" />

            <Spinner
                android:id="@+id/weight_unit_sppinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

            </Spinner>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="4dp">

            <TextView
                style="@style/CategoryStyle"
                android:text="@string/minimum_quantity" />

            <EditText
                android:id="@+id/edit_product_minimum_quantity"
                style="@style/EditorFieldStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="number"
                android:text="0" />

            <TextView
                android:id="@+id/edit_product_minimum_quantity_unit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center"
                android:layout_weight="1"
                android:paddingLeft="8dp"
                tools:text="Kg">

            </TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="4dp">

            <TextView
                style="@style/CategoryStyle"
                android:text="@string/maximum_quantity" />

            <EditText
                android:id="@+id/edit_product_maximum_quantity"
                style="@style/EditorFieldStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="number" />

            <TextView
                android:id="@+id/edit_product_maximum_quantity_unit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center"
                android:layout_weight="1"
                android:paddingLeft="8dp"
                tools:text="Kg">

            </TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="4dp">

            <TextView
                style="@style/CategoryStyle"
                android:text="@string/rate" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|center"
                    android:text="@string/currency"/>
                <EditText
                    android:id="@+id/edit_product_price"
                    style="@style/EditorFieldStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/rate"
                    android:inputType="numberDecimal" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="left|center"
                    android:orientation="vertical"
                    android:paddingLeft="4dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/per"
                        android:textAppearance="?android:textAppearanceSmall" />

                    <TextView
                        android:id="@+id/edit_product_rate_weight_unit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:textAppearanceSmall"
                        tools:text="Ton" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="4dp">

            <TextView
                style="@style/CategoryStyle"
                android:text="@string/expiry_date" />

            <Button
                android:id="@+id/date_picker_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/pick_date" />

            <TextView
                android:id="@+id/date_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="4dp" />

            <Button
                android:id="@+id/time_picker_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/pick_time" />

            <TextView
                android:id="@+id/time_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:paddingBottom="8dp"
            android:paddingLeft="4dp"
            android:paddingTop="16dp"
            android:text="@string/please_enter_your_contact_details"
            android:textColor="@color/colorAccent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="4dp">

            <TextView
                style="@style/CategoryStyle"
                android:text="@string/phone_number" />

            <EditText
                android:id="@+id/farmer_phone_number"
                style="@style/EditorFieldStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:maxLength="10" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="4dp">

            <TextView
                style="@style/CategoryStyle"
                android:text="@string/address" />

            <EditText
                android:id="@+id/farmer_address"
                style="@style/EditorFieldStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/address"
                android:inputType="text" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>
